# bgfx_cursor_test

./: BGFX_WINDOWS_SETUP.md  BUILD_MANUAL.md  CMakeLists.txt  CMakeLists_VisualStudio.txt  CMakeLists_Windows.txt  CMakeLists_Windows_NoPkgConfig.txt  Makefile  README.md  TROUBLESHOOTING.md  asteroids  asteroids_test  build-vs-legacy.bat  build-vs-simple.bat  build-vs.bat  build-vs.ps1  build.bat  build.ps1  build.sh  clean-build.bat  diagnose-cmake.bat  diagnose-cmake.ps1  install-bgfx-windows.bat  install-deps-vs.bat  install-deps-windows.bat  install-glfw-windows.bat  set-vcpkg-path.bat  test-cmake.bat  test-simple.bat  test-verification.bat  test_compile.cpp  verify-cmake.bat
assets/shaders/: background.frag  background.vert  sprite.frag  sprite.vert
include/: asteroid.hpp  audio.hpp  bullet.hpp  entity.hpp  game.hpp  particle_system.hpp  player.hpp  renderer.hpp  shader_utils.hpp
src/: asteroid.cpp  audio.cpp  bgfx_compat.h  bullet.cpp  entity.cpp  game.cpp  main.cpp  main_test.cpp  particle_system.cpp  player.cpp  renderer.cpp  shader_utils.cpp
